src/App.scss
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');

$github-nav: #161b22;
$github-nav-text: #f0f6fc;
$github-body: #0d1117;
$github-body-text: #8b949e;

$color-github: #161b22;
$color-linkedin: #0a66c2;
$color-mail: #77dd77;

$nav-height: 3.34375rem;

html {
	font-size: 100%;
}

body {
	margin: 0;
	font-family: 'Open Sans', sans-serif;
}

a:link, a:visited {
	text-decoration: none;
}

ul {
	padding: 0;
}

%white-shadow {
	color: white;
	filter: drop-shadow(0 0 0.1rem black);
}

.justify {
	text-align: justify;
}

.white {
	color: white;
}

nav {
	position: fixed;
	height: $nav-height;
	width: 100%;
	opacity: 0;
	font-weight: 700;
	transition: opacity 0.2s, background-color 0.2s;
	z-index: 1;

	&.transparent {
		opacity: 1;
	}
	&.opaque {
		opacity: 1;

		ul li a {
			color: $github-nav-text;
		}
	}
	ul {
		list-style: none;
		margin: 0;
		text-align: center;

		li {
			display: inline-block;
			padding: 1rem 0;

			a {
				@extend %white-shadow;

				padding: 1rem 1rem;
				transition: color 0.2s;

				&.active {
					color: orange;
				}
				&:hover {
					cursor: pointer;
				}
			}
		}
	}
}

#nav-background {
	position: absolute;
	height: $nav-height;
	width: 100%;
	background-color: $github-nav;

	&.fixed {
		position: fixed;
		top: 0;
	}
}

section {
	display: flex;
	flex-direction: column;
	align-items: center;
	text-align: center;

	.content {
		margin-left: 2rem;
		margin-right: 2rem;
		max-width: 50rem;
	}
	.section-name {
		margin-block-start: 0;
		padding-top: 7.5rem;
		color: orange;
	}
}

#home {
	height: 100vh;
	min-height: 55vw;

	#rain-image, #rain-video {
		position: absolute;

		object-fit: cover;
		object-position: 50% 0%; // show the center of the background video (rain part)

		width: 100%;
		height: 100vh;
		min-height: inherit;
	}
	#rain-image {
		z-index: -2;
	}
	#rain-video {
		position: fixed;
		z-index: -1;
	}
	> div {
		flex: 1;
	}
	.content {
		@extend %white-shadow;

		display: flex;
		flex-direction: column;
		justify-content: center;

		padding: 5rem 0;
		font-weight: 700;

		#name, #roles {
			margin: 0;
		}
		#name {
			font-size: 3rem;
		}
		#roles {
			margin-bottom: 0.25rem;
			font-size: 0.9rem;
		}
		#socials {
			font-size: 3rem;

			> * {
				color: inherit;
				margin: 0 0.5rem;

				svg, path {
					color: inherit;
					transition: color 0.075s;
				}

				&#icon-github:hover {
					color: $github-nav;
				}
				&#icon-linkedin:hover {
					color: $color-linkedin;
				}
				&#icon-mail:hover{
					color: $color-mail;
				}
			}
		}
		#wip {
			font-size: 1.25rem;
			* {
				margin: 0 0.25rem;
			}
		}
	}
}

#about, #resume {
	font-weight: 600;
}

#about {
	background-color: $github-body;
	color: $github-body-text;

	a {
		color: white;
	}

	#about-introduction * {
		max-width: 50rem;
		margin: 5rem inherit;

		span {
			color: lighten($github-body-text, 10);
		}
	}

	#about-info {
		max-width: 50rem;
		margin-bottom: 5rem;

		div {
			text-align: left;
		}
	}
}

#resume {
	min-height: 100vh;
	background-color: white;

	a {
		color: orange;
	}
}

@media(min-width: 60vh) { // desktop proportions
	#home {
		#rain-image, #rain-video {
			object-position: 0% 100%; // always show left side of the background video
		}
	}

	#about {
		#about-info {
			display: flex;
			gap: 2.5rem;

			div {
				flex: 1;
			}
		}
	}
}

